6.3.5
  - Performance improvement.

6.3.4
  - Added inline view style for Informix.

6.3.3
  - Get IdentifierQuoteString from config if target DBMS differs from source DBMS.

6.3.2
  - Data Browser has been improved.
  - Bug fix for "Column name not exported with double quotes" https://sourceforge.net/p/jailer/discussion/700499/thread/a3635560/

6.3.1
  - Fixed an incompatibility with Java 9.

6.3
  - Data browser tables are now sortable.
  - Multithreaded import.
  - GUI improvements.

6.2
  - Added possibility to specify the target DBMS for a generated SQL script.
    This allows to export data and import it into a different DBMS.
  - Support for virtual columns.
  - Fixed a bug concerning NVARCHAR literals on MS SQL Server.

6.1.3
  - fixed an incompatibility with PostgreSQL JDBC Driver 9.1. 

6.1.2
  - Improved performance of the Data Browser.

6.1.1
  - Fixed an issue with creating a new model after deleting a model with the same name (thanks to Dave).
  - Fixed a performance issue within the Data Browser.

6.1
  - The new feature "Filter Templates" allows you to define rules for assigning filters to columns.
    (Edit -> Filter editor... -> Templates)
  - Filters on primary key columns will automatically be applied to the corresponding foreign key columns.

6.0.3
  - Fixed an error extracting from a postgresql table with a date primary key and a local database (thanks to olivier45).
    See https://sourceforge.net/p/jailer/discussion/700499/thread/6ffaf110/

6.0.2
  - Fixed an incompatibility with Java 9.

6.0.1
  - Bug fixes for "Error exporting from postgresql with global tables with a working table schema"
    and "Error exporting from postgresql with temporary tables"
    See https://sourceforge.net/p/jailer/discussion/700499/thread/a7f0af2c/

6.0
  - New "Export To" mode allows to export rows directly into a different schema in the same database. 

5.6.1
  - Minor bug fixes.

5.6.0
  - Improved error handling.
  - Improved performance.

5.5.7